--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Три лучших кафе Москвы</title>
+    <title>Топ 5 лучших кафе Москвы</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
   </head>
   <body>
@@ -12,6 +12,8 @@
         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4" aria-label="Slide 5"></button>
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
@@ -53,6 +55,36 @@
               <div class="text-position">
                 <p>ДИАПАЗОН ЦЕН: 700 руб - 2 000 руб</p>
                 <p>ТИП КУХНИ: Кафе, Европейская</p>
+                <p>СПЕЦИАЛИЗИРОВАННОЕ МЕНЮ: Подходит для вегетарианцев, Для веганов, Безглютеновые блюда</p>
+              </div>
+              </div>
+        </div>
+
+        <div class="carousel-item">
+          <img src="img/4.jpg" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <div class="more">
+              <a target="blank" href="https://www.restoclub.ru/msk/place/untitled-1"><button class="button">Подробнее</button></a>
+            </div>
+              <h5 class="name-slide">Untitled</h5>
+              <div class="text-position">
+                <p>ДИАПАЗОН ЦЕН: 500 руб - 1 700 руб</p>
+                <p>ТИП КУХНИ: Кафе, Европейская, Центральноевропейская</p>
+                <p>СПЕЦИАЛИЗИРОВАННОЕ МЕНЮ: Подходит для вегетарианцев, Для веганов, Безглютеновые блюда</p>
+              </div>
+              </div>
+        </div>
+
+        <div class="carousel-item">
+          <img src="img/5.jpg" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <div class="more">
+              <a target="blank" href="https://www.afisha.ru/msk/restaurant/breakfast-cafe-40100/"><button class="button">Подробнее</button></a>
+            </div>
+              <h5 class="name-slide">Breakfast cafe</h5>
+              <div class="text-position">
+                <p>ДИАПАЗОН ЦЕН: 800 руб - 2 100 руб</p>
+                <p>ТИП КУХНИ: Кафе, Европейская, Центральноевропейская</p>
                 <p>СПЕЦИАЛИЗИРОВАННОЕ МЕНЮ: Подходит для вегетарианцев, Для веганов, Безглютеновые блюда</p>
               </div>
               </div>
