--- a/index.html
+++ b/index.html
@@ -7,6 +7,25 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
   </head>
   <body>
+<div class="red">
+  <div class="d-flex flex-column justify-content-center w-100 h-100">
+
+    <div class="d-flex flex-column justify-content-center align-items-center">
+      <h1 class="fw-light text-white m-0">Здраствуйте! На этом сайте Вы сможете выбрать кафе, которое будет Вам по душе</h1>
+      <div class="btn-group my-5">
+        <a href="#slide" class="btn btn-outline-light">Начнём?<i class="fas fa-expand ms-2"></i></a>
+      </div>
+      <a href="https://manuel.pinto.dev" class="text-decoration-none">
+        <h5 class="fw-light text-white m-0">— Pen by Rodion Kalinichev —</h5>
+      </a>
+    </div>
+  </div>
+  </div>
+  </div>
+
+
+
+<div id="slide">
     <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
       <div class="carousel-indicators">
         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -100,6 +119,7 @@
       </button>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+</div>
   </body>
 </html>
 
@@ -109,6 +129,15 @@
 
 
 <style>
+html {
+  scroll-behavior:unset;
+}
+
+
+.red {
+  height: 100%;
+}
+
 .text-position {
   position: relative;
   top: -350px;
@@ -194,7 +223,32 @@ content: '';
   opacity: 1;
 }
 
+body {
+	background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+	background-size: 400% 400%;
+	animation: gradient 15s ease infinite;
+	height: 100vh;
+}
 
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+}
+
+
+
+/*Убрать полосу прокрутки для всей страницы*/
+::-webkit-scrollbar {
+  width: 0;
+}
 
 
 </style>
+
