--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
   <body>
 <div class="red">
   <div class="d-flex flex-column justify-content-center w-100 h-100">
-
     <div class="d-flex flex-column justify-content-center align-items-center">
       <h1 class="fw-light text-white m-0">Здраствуйте! На этом сайте Вы сможете выбрать кафе, которое будет Вам по душе</h1>
       <div class="btn-group my-5">
@@ -224,7 +223,7 @@ content: '';
 }
 
 body {
-	background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+	background: linear-gradient(-45deg, #151515, #646464, #a9a9aa, #151515);
 	background-size: 400% 400%;
 	animation: gradient 15s ease infinite;
 	height: 100vh;
