--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@ content: '';
 }
 
 body {
-	background: linear-gradient(-45deg, #151515, #646464, #a9a9aa, #151515);
+	background: linear-gradient(45deg, rgba(0,0,0,1) 0%, rgba(129,117,63,1) 25%, rgba(255,208,0,1) 50%, rgba(129,117,63,1) 75%, rgba(0,0,0,1) 100%);
 	background-size: 400% 400%;
 	animation: gradient 15s ease infinite;
 	height: 100vh;
